<resources>
    <string name="app_name">Habits</string>
    <string name="navigation_drawer_open">Open menu</string>
    <string name="navigation_drawer_close">Close menu</string>
    <string name="nav_header_title">Habits</string>
    <string name="nav_header_subtitle">Your habit coach</string>
    <string name="nav_header_desc">Menu</string>

    <string name="menu_tasks">All Tasks</string>
    <string name="menu_manage">Configure</string>
    <string name="menu_options">Options</string>
    <string name="menu_today">Today's tasks</string>
    <string name="menu_stats">Stats</string>

    <string name="option_view_deleted">View deleted tasks</string>
    <string name="stats_total">Total Tasks</string>
    <string name="stats_completed">Completed tasks</string>
    <string name="stats_incompleted">Incompleted tasks</string>
    <string name="stats_overall">Overall Stats</string>
    <string name="stats_today">Today Stats</string>

    <string name="enabled">Enabled</string>
    <string name="language">Language</string>
    <string name="minutes">Minutes</string>

    <string name="task">Task</string>
    <string name="task_title">Task Title</string>
    <string name="task_category">Category</string>
    <string name="task_status">Status</string>
    <string name="task_description">Description</string>
    <string name="task_time">Time</string>

    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="one_time">One time</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="menu_yesterday">Yesterday</string>


</resources>
