<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_today"
            android:icon="@drawable/ic_menu_tasks"
            android:title="@string/menu_today" />
        <item
            android:id="@+id/nav_tasks"
            android:icon="@drawable/ic_menu_tasks"
            android:title="@string/menu_tasks" />
        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/ic_menu_tasks"
            android:title="@string/menu_stats" />
    </group>

    <item android:title="@string/menu_options">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_manage"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_manage" />
        </menu>
    </item>

</menu>
